# crookie

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Handle.h  LICENSE  LockPolicy.h  LockedRef.h  README.md  bitbucket-pipelines.yml  shippable.yml
EventBus/: AEventHandler.h  ActiveObject.h  DynamicBus.h  EventBase.h  EventBus.cpp  EventBus.h  HandlerFunctor.h
EventBus/Core/: BucketException.h  EventBus.cpp  EventBus.h  IEvent.h  IEventHandler.cpp  IEventHandler.h  MonitoredCollection.h
EventBus/Dynamic/: AEventHandler.h  ActiveObject.h  EventBus.cpp  EventBus.h
EventBus/Static/: AEventHandler.h  ActiveObject.h  StaticBus.h
EventBusUnitTest/: ActiveObjectsTest.cpp  ActiveObjectsTest.h  BasicFunctionalTest.cpp  BasicFunctionalTest.h  EventBusUnitTest.mm
MultiThreading/: LockPolicy.h  LockedPtr.h  LockedRef.h  SimpleLock.h
Utils/: ScopeGuard.h
crookie.xcodeproj/: project.pbxproj
crookie.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
crookie.xcodeproj/project.xcworkspace/xcuserdata/paolo.xcuserdatad/: UserInterfaceState.xcuserstate
crookie.xcodeproj/xcuserdata/paolo.xcuserdatad/xcschemes/: EventBusUnitTest.xcscheme  crookie.xcscheme  xcschememanagement.plist
test/: CMakeLists.txt  test_ActiveObject.cpp  test_EventBus.cpp  test_LockedPtr.cpp  test_StaticBus.cpp
testexe/: main.cpp  testexe.1
